aula-01 finalizada
Updated responses for activities 3, 4, and 5, including detailed explanations about primitive types, IDE importance, and new Java 21 features.